@@ -13,6 +13,7 @@ export(mirt)
 export(multipleGroup)
 export(personfit)
 export(polymirt)
+export(read.mirt)
 export(simdata)
 export(wald)
 exportClasses(ConfirmatoryClass)
