@@ -1,3 +1,6 @@
+* read.mirt added back into the package to allow for translating estimating models into a format
+  usable by the plink package
+
 * test standard error added to plot() generic using type = 'SE', and expected score plot added 
   to itemplot() using type = 'score'
 
